# ai-bid-tool

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  WORKSPACE.md  pyproject.toml
.tmp_illustration_v2_cn/: illustration-manifest.json
.tmp_illustration_v2_components/: generation-summary.md
.tmp_illustration_v2_reference/: generation-summary.md  illustration-manifest.json
.tmp_illustration_v2_stable/: generation-summary.md  illustration-manifest.json
docs/: AI_ILLUSTRATION_API_V2.md  AI生成绘图描述提示词模板.md  AI绘图描述接口标准.md  ECharts本地图表工作台测试报告_20260527.md  FILE_GOVERNANCE.md  ILLUSTRATION_PLATFORM_DESIGN.md  NAVIGATION.md  PIPELINE_OVERVIEW.md  PROJECT_BUILD_OVERVIEW.md  PROJECT_FEATURES.md  PROJECT_STRUCTURE.md  PROJECT_TODO.md  README.md  style_guide.md  当前图型生成测试报告_20260527.md  标书AI绘图服务深化规划.md  测试说明.md  统一标书配图工具集调用说明.md  统一配图工具集验证报告_20260527.md
docs/methodology/: README.md  (+1 more)
entrypoint/: ENTRYPOINT.md
examples/: 标书示例_图示需求.md  示例_AI接口调用_SVG图3-6风格_v2.json  示例_ECharts数据图描述.json  示例_Mermaid_Graphviz渲染器_v2.json  示例_主流图型描述.json  示例_复杂关系架构描述.json  示例_带图标绘图描述.json  示例_接口关系与数据交互图.json  示例_独立绘图工具最小闭环.json  示例_统一文档配图任务.json  示例_配图平台v2任务.json
output/: test_all_types_job.json  test_rich_system.json  typical_scene_job.json
output/standalone_contract_bundle/: README.md  pyproject.toml  run_illustration.py
output/standalone_contract_bundle/docs/: AI_ILLUSTRATION_API_V2.md  ILLUSTRATION_CLI_USAGE.md  ILLUSTRATION_PLATFORM_DESIGN.md  ILLUSTRATION_SOFTWARE_ARCHITECTURE.md
output/standalone_contract_bundle/src/bid_tool/: __init__.py
output/standalone_contract_bundle/src/bid_tool/illustration/: ILLUSTRATION_EXTERNAL_INTERFACE.md  __init__.py  api.py  html_renderer.py  icons.py  platform.py  svg_renderer.py  toolkit.py
output/standalone_contract_bundle/src/bid_tool/illustration/core/: __init__.py  decision.py  job.py  manifest.py  registry.py  router.py  validator.py
output/standalone_contract_bundle/src/bid_tool/illustration/echarts_workbench/: app.js  demo-specs.js  index.html
output/standalone_contract_bundle/src/bid_tool/illustration/renderers/: base.py  graphviz.py  html.py  legacy.py
output/standalone_contract_bundle/src/bid_tool/schemas/: illustration_job_v2.schema.json  svg_diagram.schema.json
tests/: test_illustration.py  test_illustration_v2.py  test_schemas.py  test_trace.py  test_validator.py
tools/: DRAWIO.md  drawio.ps1  install-drawio.ps1
(+209 files in other folders)
